合并keywords匹配的value值